--- a/mobile/01_UI_ADHPAaM01.html
+++ b/mobile/01_UI_ADHPAaM01.html
@@ -25,7 +25,7 @@
                         <div class="gsprog_uni ">
 
                             <div class="step_cont base_border_cont mt24">
-                                <h3 class="t2_sb mb16">신청 및 참여 절차</h3>
+                                <h3 class="t2_sb">신청 및 참여 절차</h3>
                                 <div class="step_cont_area mt24">
                                     <ol>
                                         <li class="li_step01">
