--- a/mobile/07_UI_ADHPAbS05.html
+++ b/mobile/07_UI_ADHPAbS05.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <div>
-            <header id="header"></header>
+            <header id="header" data-include="header" data-type="person" data-sub-btn="back" data-title="졸업생 특화프로그램" data-title-btn="y"></header>
+
             <div class="dimmed" style="z-index: 130; display: none;"></div>
 
 
