--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -248,4 +248,5 @@
         <div class="bottom_bar person"></div>
     </body>
     <script src="../mobile/js/include.js"></script>
+<script src="../mobile/js/include_share.js"></script>
 </html>
