--- a/pc/11_UI_ADHPAbP09.html
+++ b/pc/11_UI_ADHPAbP09.html
@@ -19,7 +19,7 @@
             <!-- //skip navigation -->
 
             <!-- 헤더 영역 -->
-            <header id="header" class="new"></header>
+            <header id="header"></header>
             <!-- 헤더 영역 -->
 
             <section id="container">
