--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -378,7 +378,7 @@
                                         </div>
 
                                         <!-- 팝업내용 시작 -->
-                                        <div class="new_popup newpop_uni_index" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
+                                        <section class="new_popup allcare_popup newpop_uni_index" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>운영 프로그램</h4>
                                                 <a href="#" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
@@ -856,7 +856,7 @@
                                                     <div class="section_bottom"></div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </section>
                                     </div>
                                 </div>
 
