--- a/pc/03_UI_ADHPAbM01.html
+++ b/pc/03_UI_ADHPAbM01.html
@@ -19,7 +19,7 @@
             <!-- //skip navigation -->
 
             <!-- 헤더 영역 -->
-            <header id="header"></header>
+            <header id="header" class="new"></header>
             <!-- 헤더 영역 -->
 
             <section id="container">
@@ -103,7 +103,8 @@
 
         </div>
         <script src="../pc/js/include.js"></script>
-        <script src="../pc/js/include_share.js"></script>        <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include_share.js"></script> 
+        <script src="../pc/js/contents.js"></script>
 </body>
 
 </html>
