--- a/pc/11_UI_ADHPAbP09.html
+++ b/pc/11_UI_ADHPAbP09.html
@@ -19,7 +19,7 @@
             <!-- //skip navigation -->
 
             <!-- 헤더 영역 -->
-            <header id="header"></header>
+            <header id="header" class="new"></header>
             <!-- 헤더 영역 -->
 
             <section id="container">
@@ -203,7 +203,7 @@
 
 
                                         <!-- 팝업내용 시작 -->
-                                        <div class="new_popup newpop_major_result" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
+                                        <div class="new_popup allcare_popup newpop_major_result" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>전공 찾기</h4>
                                                 <a href="" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
