--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -19,7 +19,7 @@
             <!-- //skip navigation -->
 
             <!-- 헤더 영역 -->
-            <header id="header"></header>
+            <header id="header" class="new"></header>
             <!-- 헤더 영역 -->
 
             <section id="container">
@@ -302,7 +302,7 @@
 
                                         
                                         <!-- 팝업내용 시작 -->
-                                        <div class="new_popup newpop_pv" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
+                                        <div class="new_popup allcare_popup newpop_pv" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>개인정보 수집·이용·제공에 대한 동의서(참여자용)</h4>
                                                 <a href="#" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
