--- a/pc/15_UI_ADHPAcS03.html
+++ b/pc/15_UI_ADHPAcS03.html
@@ -19,7 +19,7 @@
             <!-- //skip navigation -->
 
             <!-- 헤더 영역 -->
-            <header id="header"></header>
+            <header id="header"class="new"></header>
             <!-- 헤더 영역 -->
 
             <section id="container">
