--- a/pc/pc_팝업샘플.html
+++ b/pc/pc_팝업샘플.html
@@ -64,10 +64,7 @@
                                     </header>
 
                                     <!-- 본문 -->
-                                    <form:form id="operPrgmForm"
-                                                name="operPrgmForm"
-                                                method="POST"
-                                                modelAttribute="HPFSAA0101VO">
+                                    <form:form id="operPrgmForm" name="operPrgmForm" method="POST" modelAttribute="HPFSAA0101VO">
 
                                         <div id="divOperPrgmCont" class="cont">
                                         <article class="box_form_content">
