--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -406,8 +406,8 @@
             <!-- 푸터 영역 -->
 
         </div>
-        <script src="../pc/js/include.js"></script>
+        <!-- <script src="../pc/js/include.js"></script> -->
         <script src="../pc/js/include_share.js"></script>
         <script src="../pc/js/contents.js"></script>
 </body>
-</html>
+</html>ㅌ
