--- a/index_univ.html
+++ b/index_univ.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>INDEX</title>
+        <title>INDEX test</title>
         <link rel="stylesheet" href="./pc/include/css/reset.css">
         <link rel="stylesheet" href="./pc/include/css/font.css">
     </head>
