--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -406,7 +406,7 @@
             <!-- 푸터 영역 -->
 
         </div>
-        <!-- <script src="../pc/js/include.js"></script> -->
+        <script src="../pc/js/include.js"></script>
         <script src="../pc/js/include_share.js"></script>
         <script src="../pc/js/contents.js"></script>
 </body>
