대학 재학생 작업(1)

--- a/index_univ.html
+++ b/index_univ.html
@@ -64,50 +64,92 @@
             <tbody>
                 <tr>
                     <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="status">-</td>
+                    <td>참여신청서 - 목록 없음</td>
+                    <td>UI_ADHPAbM01__</td>
+                    <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/03_UI_ADHPAbM01__.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
                     <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="status">-</td>
+                    <td>참여신청서 - 목록 있음</td>
+                    <td>UI_ADHPAbM02__</td>
+                    <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/04_UI_ADHPAbM02__.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
                     <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="status">-</td>
+                    <td>참여신청서 - 등록</td>
+                    <td>UI_ADHPAbS03__</td>
+                    <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/05_UI_ADHPAbS03__.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 조회</td>
+                    <td>UI_ADHPAbS04__</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/06_UI_ADHPAbS04__.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>완료 페이지 - 신청서 제출 완료</td>
+                    <td>UI_ADHPAbS03__</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/23_UI_ADHPAbS11__.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 회수(수정)</td>
+                    <td>UI_ADHPAbS05__</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/07_UI_ADHPAbS05__.html" target="_blank">PC</a>
                     </td>
                 </tr>
             </tbody>
