--- a/pc/05_UI_ADHPAbS03__.html
+++ b/pc/05_UI_ADHPAbS03__.html
@@ -158,7 +158,6 @@
                                                                         <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
-                                                                                <span class="radio_ui" aria-hidden="true"></span>
                                                                                 <span class="sr_only">선택지 1:</span>
                                                                                 <span class="label_text">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</span>
                                                                             </label>
@@ -167,7 +166,6 @@
                                                                         <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
-                                                                                <span class="radio_ui" aria-hidden="true"></span>
                                                                                 <span class="sr_only">선택지 2:</span>
                                                                                 <span class="label_text">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</span>
                                                                             </label>
@@ -273,14 +271,13 @@
 
                                             <div class="box_group_wrap">
                                                 <h3 class="t2_sb hreq_mark">참여 유형 선택</h3>
-                                                <div class="type_area">
+                                                <div class="type_area box_radio_group ">
                                                     <ul class="item_type">
                                                         <li>
                                                             <div class="new_radio_item">
                                                                 <input type="radio" id="빌드업프로젝트" name="참여유형선택" checked>
                                                                 <label for="빌드업프로젝트">
-                                                                    <span class="radio_ui" aria-hidden="true"></span>
-                                                                    <span class="w">
+                                                                        <span class="w">
                                                                         <span class="t">빌드업 프로젝트</span>
                                                                         <span class="s">※ 저학년 청년을 중심으로 심층상담 기반 개인별 중·장기 희망 직업 경력개발 로드맵 설계 및 진로탐색 및 기초역량 강화 지원</span>
                                                                     </span>
@@ -291,8 +288,7 @@
                                                             <div class="new_radio_item">
                                                                 <input type="radio" id="점프업프로젝트" name="참여유형선택">
                                                                 <label for="점프업프로젝트">
-                                                                    <span class="radio_ui" aria-hidden="true"></span>
-                                                                    <span class="w">
+                                                                        <span class="w">
                                                                         <span class="t">점프업 프로젝트</span>
                                                                         <span class="s">※ 고학년 청년을 중심으로 심층상담 기반 개인별 취업활동계획 설계 및 맞춤형 직업훈련·일경험 참여 지원</span>
                                                                     </span>
@@ -320,7 +316,6 @@
                                                             <div class="new_radio_item">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes">
                                                                 <label for="agmType1" class="ptcp_radiocustom">
-                                                                    <span class="radio_ui" aria-hidden="true"></span>
                                                                     <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
@@ -328,7 +323,6 @@
                                                             <div class="new_radio_item">
                                                                 <input type="radio" id="agmType2" name="agmType" value="no">
                                                                 <label for="agmType2" class="ptcp_radiocustom">
-                                                                    <span class="radio_ui" aria-hidden="true"></span>
                                                                     <span class="label_text">비동의</span>
                                                                 </label>
                                                             </div>
