--- a/pc/20_UI_ADHPAdS04.html
+++ b/pc/20_UI_ADHPAdS04.html
@@ -88,13 +88,12 @@
                                                     <div class="que_tit"><p class="b1_sb" id="que1_label"><span>1.</span> 프로그램 참여가 많은 도움이 되었다.</p></div>
                                                     <div class="que_desc">
                                                         <p class="s1_r valid_txt" hidden>답변을 선택해 주세요.</p>
-                                                        <fieldset aria-labelledby="que1_label">
+                                                        <fieldset class="box_radio_group" aria-labelledby="que1_label">
                                                             <ul class="radio_list">
                                                                 <li>
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_1-1" name="que_1" value="1">
                                                                         <label for="que_1-1">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">전혀 그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -103,7 +102,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_1-2" name="que_1" value="2">
                                                                         <label for="que_1-2">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -112,7 +110,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_1-3" name="que_1" value="3">
                                                                         <label for="que_1-3">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">보통이다</span>
                                                                         </label>
                                                                     </div>
@@ -121,7 +118,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_1-4" name="que_1" value="4">
                                                                         <label for="que_1-4">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇다</span>
                                                                         </label>
                                                                     </div>
@@ -130,7 +126,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_1-5" name="que_1" value="5">
                                                                         <label for="que_1-5">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">매우 그렇다</span>
                                                                         </label>
                                                                     </div>
@@ -143,13 +138,12 @@
                                                     <div class="que_tit"><p class="b1_sb" id="que2_label"><span>2.</span> 프로그램을 주변 지인에게 추천하실 의향이 있다.</p></div>
                                                     <div class="que_desc">
                                                         <p class="s1_r valid_txt" hidden>답변을 선택해 주세요.</p>
-                                                        <fieldset aria-labelledby="que2_label">
+                                                        <fieldset class="box_radio_group" aria-labelledby="que2_label">
                                                             <ul class="radio_list">
                                                                 <li>
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_2-1" name="que_2" value="1">
                                                                         <label for="que_2-1">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">전혀 그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -158,7 +152,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_2-2" name="que_2" value="2">
                                                                         <label for="que_2-2">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -167,7 +160,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_2-3" name="que_2" value="3">
                                                                         <label for="que_2-3">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">보통이다</span>
                                                                         </label>
                                                                     </div>
@@ -176,7 +168,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_2-4" name="que_2" value="4">
                                                                         <label for="que_2-4">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇다</span>
                                                                         </label>
                                                                     </div>
@@ -185,7 +176,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_2-5" name="que_2" value="5">
                                                                         <label for="que_2-5">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">매우 그렇다</span>
                                                                         </label>
                                                                     </div>
@@ -198,13 +188,12 @@
                                                     <div class="que_tit"><p class="b1_sb" id="que3_label"><span>3.</span> 프로그램이 직업 선택에 도움이 되었다.</p></div>
                                                     <div class="que_desc">
                                                         <p class="s1_r valid_txt" hidden>답변을 선택해 주세요.</p>
-                                                        <fieldset aria-labelledby="que3_label">
+                                                        <fieldset class="box_radio_group" aria-labelledby="que3_label">
                                                             <ul class="radio_list">
                                                                 <li>
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_3-1" name="que_3" value="1">
                                                                         <label for="que_3-1">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">전혀 그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -213,7 +202,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_3-2" name="que_3" value="2">
                                                                         <label for="que_3-2">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇지 않다</span>
                                                                         </label>
                                                                     </div>
@@ -222,7 +210,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_3-3" name="que_3" value="3">
                                                                         <label for="que_3-3">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">보통이다</span>
                                                                         </label>
                                                                     </div>
@@ -231,7 +218,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_3-4" name="que_3" value="4">
                                                                         <label for="que_3-4">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">그렇다</span>
                                                                         </label>
                                                                     </div>
@@ -240,7 +226,6 @@
                                                                     <div class="new_radio_item">
                                                                         <input type="radio" id="que_3-5" name="que_3" value="5">
                                                                         <label for="que_3-5">
-                                                                            <span class="radio_ui" aria-hidden="true"></span>
                                                                             <span class="label_text">매우 그렇다</span>
                                                                         </label>
                                                                     </div>
