--- a/index_univ.html
+++ b/index_univ.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>INDEX test</title>
+        <title>INDEX</title>
         <link rel="stylesheet" href="./pc/include/css/reset.css">
         <link rel="stylesheet" href="./pc/include/css/font.css">
     </head>
@@ -70,11 +70,11 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
-                    <td>UI_ADHPAbM01__</td>
+                    <td>참여신청서 - 목록 없음</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/03_UI_ADHPAbM01__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-목록없음.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -85,11 +85,26 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
-                    <td>UI_ADHPAbM02__</td>
+                    <td>참여신청서 - 목록 있음</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/04_UI_ADHPAbM02__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-목록있음.html" target="_blank">PC</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="no"></td>
+                    <td>마이페이지</td>
+                    <td>참여 프로그램 관리</td>
+                    <td>대학 재학생 맞춤형 고용서비스</td>
+                    <td>참여신청서</td>
+                    <td></td>
+                    <td>참여신청서 - 이전정보 팝업</td>
+                    <td>참여신청서 - 이전정보 팝업</td>
+                    <td class="status"></td>
+                    <td></td>
+                    <td>
+                        <a href="./pc/참여신청서-이전정보팝업.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -100,11 +115,11 @@
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 등록</td>
-                    <td>UI_ADHPAbS03__</td>
+                    <td>참여신청서 - 등록</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/05_UI_ADHPAbS03__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-등록.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -114,12 +129,12 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td></td>
-                    <td>참여신청서 - 조회</td>
-                    <td>UI_ADHPAbS04__</td>
+                    <td>참여 신청서 - 등록(이전 등록/제출 신청정보가 있는 경우)</td>
+                    <td>참여신청서-등록_이전 등록,제출신청정보가있는경우.html</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/06_UI_ADHPAbS04__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-등록_이전 등록,제출신청정보가있는경우.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -129,12 +144,12 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td></td>
-                    <td>완료 페이지 - 신청서 제출 완료</td>
-                    <td>UI_ADHPAbS03__</td>
+                    <td>참여 신청서 - 등록 제출완료</td>
+                    <td>참여신청서-등록_제출완료.html</td>
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/23_UI_ADHPAbS11__.html" target="_blank">PC</a>
+                        <a href="./pc/참여신청서-등록_제출완료.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
