--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>12. 개인정보 수집·이용·제공에 대한 동의서(참여자용)</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
