--- a/pc/22_UI_ADHPAeM02.html
+++ b/pc/22_UI_ADHPAeM02.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>22. 상담이력 - 목록 있음	</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
