--- a/pc/07_UI_ADHPAbS05.html
+++ b/pc/07_UI_ADHPAbS05.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>07. 참여신청서 - 회수(수정)</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
