--- a/pc/08_UI_ADHPAbP06.html
+++ b/pc/08_UI_ADHPAbP06.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>08. 운영 대학 검색 팝업</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
