--- a/pc/09_UI_ADHPAbP07.html
+++ b/pc/09_UI_ADHPAbP07.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>09. 전공찾기팝업 - 조회/선택/등록</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
