--- a/pc/13_UI_ADHPAcM01.html
+++ b/pc/13_UI_ADHPAcM01.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>13. 프로그램 신청 - 목록 없음</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
