--- a/pc/15_UI_ADHPAcS03.html
+++ b/pc/15_UI_ADHPAcS03.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>15. 프로그램 신청 - 신청</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
