--- a/pc/16_UI_ADHPAcS04.html
+++ b/pc/16_UI_ADHPAcS04.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>16. 프로그램 신청 - 조회</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
