--- a/pc/18_UI_ADHPAdM02.html
+++ b/pc/18_UI_ADHPAdM02.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>18. 참여 프로그램 관리 - 목록 있음</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
