--- a/pc/19_UI_ADHPAdS03.html
+++ b/pc/19_UI_ADHPAdS03.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>19. 참여 프로그램 관리 - 조회</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
