--- a/pc/24_UI_ADHPAbS12.html
+++ b/pc/24_UI_ADHPAbS12.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>24. 완료 페이지 - 회수 완료</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
