--- a/pc/pc_팝업샘플.html
+++ b/pc/pc_팝업샘플.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Sample</title>
         <script src="../pc/include/js/head.js"></script>
+        <script src="../pc/js/jquery-3.7.1.min.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
     </head>
